feat: 객체가 상태를 가지지 않도록 수정